* New ETCCDI Climate Index definition (`metaclipR.etccdi`)
* New `metaclipR.Ensemble` for multimodel ensemble representations
* New `metaclipR.Validation`, for characterizing validation steps
* New `metaclipR.loadeR`, to describe ds:DatasetSubset entities generated with the climate4R loading functions
* New `metaclipR.BiasCorrection`, to describe bias correction
* Allow multi-layer plot representation in `metaclipR.spatialPlot` when multiple members exist
* Automatic connection to remote ontology files on package start (`.onAttach`)
* New internal functions:
   - For attribute-preserving graph unions (`my_union`, `my_union_graph`)
   - For automated package version checks via internal lookup table (`pkgVersionCheck` internal)
   - For identifying individual instances of specific METACLIP vocabularies (`isIndividualInstance`)
   - For identifying the class belonging of a named individual (`getIndividualClass`)
   - Internal adapation of `graph2json` to incorporate references to individuals
* Other changes and class/property renaming for full compatibility with [datasource.owl v0.3](http://www.metaclip.org/datasource/0.3/datasource.owl)
* METACLIP paper version submitted to EMS

## v1.1.0 (devel)

* Internal changes pointing to the new domain <http://www.metaclip.org>
* Define individual instances of *ds:Dataset*
* Include longname as node name in *ds:Variable* nodes. Moved short name to *ds:hasShortName* data property
* Literal command calls replacing former `Argument --> ArgumentValue` for easier graph readability. 
   * Updated some functions' arguments accordingly
* Update *ds:HorizontalExtent* class data properties and allow for definition of independent HorizontalExtent graphs used as reference in subsequent steps (i.e. interpolation)
* Replace `metaclipR.Regridding` (deprecated) by `metaclipR.Interpolation`, in accordance with vocabulary renaming (*datasource v0.7*)
* Update package version support
* Minor documentation updates