@@ -49,6 +49,7 @@ importFrom(igraph,set_vertex_attr)
 importFrom(igraph,union)
 importFrom(igraph,vertex_attr)
 importFrom(igraph,vertex_attr_names)
+importFrom(magrittr,"%<>%")
 importFrom(magrittr,"%>%")
 importFrom(magrittr,extract)
 importFrom(magrittr,extract2)
