@@ -20,13 +20,23 @@
 #' @param version A character string of the package version (e.g. as returned by \code{\link[utils]{packageVersion}})
 #' @param package Validation package. 
 #' @param fun Validation function.
+#' @param type Validation type. Current choices are \code{"validation"} and \code{"verification"}.
+#' In essence, this argument maps the step to the general \emph{ds:Validation} class, or to the more
+#' specific \emph{ForecastVerification} subclass, when relevant
+#' @param measure.name Character string describing the name of the validation measure (e.g. \code{"Correlation"}).
+#' If omitted, the \code{QualityAspect} value will be assigned. This will affect the name of the validation node in the 
+#' METACLIP Interpreter graph (thus, it is recommended its usage for better provenance readability).
 #' @template template_arglistParam
 #' @template template_arglist
 #' @param QualityAspect Class name. Quality Aspect addressed by the Validation. Possible values are 
 #' \code{"Bias"}, \code{"Accuracy"}, \code{"Association"}, \code{"Reliability"}, \code{"Discrimination"} and \code{"Resolution"}.
 #' @param PredictionGraph metaclipR output containing the Predictions/Projections to validate
 #' @param ReferenceGraph metaclipR output containing the reference (observations) 
-#' @details This function takes as reference the semantics defined in the Verification ontology defined in the 
+#' @details 
+#' This function takes as reference the semantics defined in the Verification ontology defined in the 
+#' 
+#' @note 
+#' This function supersedes the more specific \code{metaclipR.easyVerification}, deprecated since \pkg{metaclipR} v1.1.0.
 #' Metaclip Framework (\url{http://www.metaclip.org}).
 #' @export
 #' @importFrom igraph make_empty_graph add_vertices add_edges 
@@ -36,12 +46,19 @@
 metaclipR.Validation <- function(package,
                                  version,
                                  fun,
+                                 measure.name = NULL,
+                                 type = c("validation", "verification"),
                                  QualityAspect,
                                  arg.list, 
                                  PredictionGraph,
                                  ReferenceGraph) {
     if (class(PredictionGraph$graph) != "igraph") stop("Invalid input PredictionGraph (not an 'igraph-class' object)")   
     if (class(ReferenceGraph$graph) != "igraph") stop("Invalid input ReferenceGraph (not an 'igraph-class' object)")   
+    type <- match.arg(type, choices = c("validation", "verification"))
+    val.classname <- switch(type,
+                            "validation" = "veri:Validation",
+                            "verification" = "veri:ForecastVerification")
+    val.op <- gsub("veri:", "veri:had", val.classname)
     pgraph <- PredictionGraph$graph
     refgraph <- ReferenceGraph$graph
     pnode <- PredictionGraph$parentnodename
@@ -52,17 +69,17 @@ metaclipR.Validation <- function(package,
                                                           "Discrimination",
                                                           "Reliability",
                                                           "Resolution"))
+    val.label <- ifelse(is.null(measure.name), QualityAspect, measure.name)
     origin.node.name <- paste0("Validation.", randomName())
     pgraph <- add_vertices(pgraph,
                            nv = 1,
                            name = origin.node.name,
-                           label = QualityAspect,
-                           className = "veri:Validation",
-                           description = "Metadata to encode validation")
+                           label = val.label,
+                           className = val.classname)
     pgraph <- add_edges(pgraph, 
                         c(getNodeIndexbyName(pgraph, pnode),
                           getNodeIndexbyName(pgraph, origin.node.name)),
-                        label = "veri:hadValidation")
+                        label = val.op)
     # Linking the verification with the reference
     graph <- my_union_graph(pgraph, refgraph)
     graph <- add_edges(graph, 
